--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
             </section>
 
-            <section class="services section" id="services">
+            <section class="services section" id="projects">
                 <h2 class="section_title">Check out my projects</h2>
                 <span class="section_subtitle">Here's what I've been working on</span>
 
@@ -154,11 +154,11 @@
                         <div>
                             <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Project 1</h3>
-                            <p class="project_description">
-                                fhwoifhwiofhwoifh
+                                <h3 class="services_title">Project 1</h3>
+                                <p class="project_description">
+                                    fhwoifhwiofhwoifh
+                                </p>
                             </div>
-                        </p>
                         </div>
                         <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             View More 
@@ -176,6 +176,37 @@
                     </div>
 
                     <!-- project 2 -->
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">Project 1</h3>
+                            <p class="project_description">
+                                fhwoifhwiofhwoifh
+                            </div>
+                        </p>
+                        </div>
+                        <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            View More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </span>
+                        <div class="services_modal">
+                            <div class="services_modal-content">
+                                <div>
+                                    <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                                    <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                                        <h3 class="services_title">Project 1</h3>
+                                        <p class="project_description">
+                                            fhwoifhwiofhwoifh
+                                        </p>
+                                    </div>
+                                </div>
+                                <i class="uil uil-times services_modal-close"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- project 3 -->
                     <div class="services_content">
                         <div>
                             <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
@@ -227,91 +258,6 @@
                         </div>
                     </div>
 
-                    <div class="services_content" style="visibility: hidden;">
-
-                    </div>
-
-                </div>
-            </section>
-
-            <!--==================== PROJECTS ====================-->
-            <section class="project section" id="projects">
-                <h2 class="section_title">Check out my projects</h2>
-                <span class="section_subtitle">Here's what I've been working on</span>
-                <div class="project_container container grid">
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                                fhwoifhwiofhwoifh
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div>
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                            fhwoifhwiofhwoifh
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div>
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                            fhwoifhwiofhwoifh
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div> 
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                                fhwoifhwiofhwoifh
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div>
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                            Assessment platform with a drag-and-drop quiz builder, embeddable graphs and formulas, and a customizable scoring algorithm
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div>
-                    <!-- project 1 -->
-                    <div class="project_card">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
-                        <h3 class="project_title"> A new website</h3>
-                        <p class="project_description">
-                            Assessment platform with a drag-and-drop quiz builder, embeddable graphs and formulas, and a customizable scoring algorithm
-                        </p>
-                        <a href="" class="project_button">
-                            Learn More
-                            <i class="uil uil-arrow-right project_icon"></i>
-                        </a>
-                    </div>
-                    </div>            
                 </div>
             </section>
 
