--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle">Student Developer</h3>
-                            <p class="home_description">I'm a junior at Brown University studying Computer Science and International and Public Affairs with interests in tech regulation, and human-centered design.</p>
+                            <p class="home_description">I'm a junior at Brown University studying Computer Science and International and Public Affairs with an interest in tech regulation and human-centered computing.</p>
                             <a href="#contact" class="button button--flex">
                                 Let's Connect &nbsp;:)
                             </a>
@@ -132,10 +132,10 @@
                         <p class="about_description">
                             For the longest time, I believed in technology’s promise to solve society’s greatest challenges, without realizing that technology is a double-edged sword. 
                             <br><br>
-                            With the history of systemic inequities encoded into our everyday devices, I strive to re-engineer human-centric solutions and leverage the power of technology responsibly for social impact. This mission translates into my work wherever I go, whether that’s building a VR interface for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
+                            With the history of systemic inequities encoded into our everyday devices, I strive to re-engineer human-centric solutions and leverage the power of technology for social impact. This mission translates into my work wherever I go, whether that’s building a VR interface for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
                         </p>
                         <div class="about_button">
-                            <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/nyt.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button_icon"></i>
                             </a>
                         </div>
@@ -144,26 +144,26 @@
             </section>
 
             <section class="services section" id="projects">
-                <h2 class="section_title">Check out my projects</h2>
-                <span class="section_subtitle">Here's what I've been working on</span>
+                <h2 class="section_title">Check out my work</h2>
+                <span class="section_subtitle">Here are a few projects I've worked on</span>
 
                 <div class="services_container container grid">
 
                     <!-- project 1 -->
                     <div class="services_content">
                         <div>
-                            <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                            <img src="assets/img/sample_dataset.png" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                                <h3 class="services_title">Project 1</h3>
+                                <h3 class="services_title">Deepfake Facial Detection</h3>
                                 <p class="project_description">
-                                    fhwoifhwiofhwoifh
+                                    In a group of four, I implemented a deepfake facial detector using MTCNN for feature extraction and EfficientNetB0 to categorize real vs. fake faces in video clips.
                                 </p>
                             </div>
                         </div>
-                        <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://github.com/jennjwang/deepfake-detection" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
-                        </span>
+                        </a>
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Project 1</h4>
@@ -178,18 +178,18 @@
                     <!-- project 2 -->
                     <div class="services_content">
                         <div>
-                            <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                            <img src="assets/img/arview.PNG" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Project 1</h3>
+                            <h3 class="services_title">AR/VR Pictionary</h3>
                             <p class="project_description">
-                                fhwoifhwiofhwoifh
+                                A real-time multiplayer game of pictionary created as a proof-of-concept for collaborative drawing in VR and AR, built using Unity and Normcore.
                             </div>
                         </p>
                         </div>
-                        <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://github.com/jennjwang/arvr-pictionary" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
-                        </span>
+                        </a>
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <div>
@@ -211,16 +211,16 @@
                         <div>
                             <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Project 1</h3>
+                            <h3 class="services_title">RLang</h3>
                             <p class="project_description">
-                                fhwoifhwiofhwoifh
+                                RLang is a Domain-Specific Language for communicating domain knowledge to an RL agent. Using RLang, you can specify information about every element of a Markov Decision Process to bootstrap the agent's learning. 
                             </div>
                         </p>
                         </div>
-                        <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://rafarodsa.github.io/rlang_rldm2022.pdf" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
-                        </span>
+                        </a>
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Project 1</h4>
@@ -237,7 +237,7 @@
                         <div>
                             <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Project 1</h3>
+                            <h3 class="services_title">Robotic Learning Interface</h3>
                             <p class="project_description">
                                 fhwoifhwiofhwoifh
                             </div>
