removed skills for now

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                             <i class="uil uil-bag nav_icon"></i>Experience
                         </a>
                     </li>
-                    <li class="nav_item">
+                    <!-- <li class="nav_item">
                         <a href="#skills" class="nav_link">
                             <i class="uil uil-file-alt nav_icon"></i> Skills
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav_item">
                         <a href="#contact" class="nav_link">
                             <i class="uil uil-message nav_icon"></i>Contact
@@ -376,10 +376,10 @@
             </section>
 
             <!--==================== SKILLS ====================-->
-            <section class="skills section" id="skills">
+            <!-- <section class="skills section" id="skills">
                 <h2 class="section_title">Skills</h2>
                 <span class="section_subtitle">My technical level</span>
-            </section>
+            </section> -->
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
@@ -430,9 +430,9 @@
                     </div>
 
                     <ul class="footer_links">
-                        <li>
+                        <!-- <li>
                             <a href="#skills" class="footer_link">Skills</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="#experience" class="footer_link">Experience</a>
                         </li>
