--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
                             <h3 class="services_title">RLang</h3>
                             <p class="project_description">
-                                RLang is a Domain-Specific Language for communicating domain knowledge to an RL agent. Using RLang, you can specify information about every element of a Markov Decision Process to bootstrap the agent's learning. 
+                                A Domain-Specific Language for communicating domain knowledge to an RL agent. Using RLang, you can specify information about every element of a Markov Decision Process to bootstrap the agent's learning. 
                             </div>
                         </p>
                         </div>
@@ -232,7 +232,7 @@
                         </div>
                     </div>
 
-                    <!-- project 3 -->
+                    <!-- project 4 -->
                     <div class="services_content">
                         <div>
                             <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
@@ -247,6 +247,58 @@
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </span>
+                        <div class="services_modal">
+                            <div class="services_modal-content">
+                                <h4 class="services_modal-title">Project 1</h4>
+                                <p>
+                                    fwoifhwoihfiowhfoiw
+                                </p>
+                                <i class="uil uil-times services_modal-close"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- project 5 -->
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/hab.png" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title">Hack@Brown</h3>
+                            <p class="project_description">
+                                I led a team of ten full-stack developers to build a mobile responsive website for Brown’s annual hackathon, using React, Typescript, and Firebase, and completing the Agile development process. 
+                            </div>
+                        </p>
+                        </div>
+                        <a href="https://2022.hackatbrown.org/" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            View More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
+                        <div class="services_modal">
+                            <div class="services_modal-content">
+                                <h4 class="services_modal-title">Project 1</h4>
+                                <p>
+                                    fwoifhwoihfiowhfoiw
+                                </p>
+                                <i class="uil uil-times services_modal-close"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- project 6 -->
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/nws.png" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                            <h3 class="services_title"> Redesigning the National Weather Service</h3>
+                            <p class="project_description">
+                                I redesigned a webpage under the National Weather Service to add mobile responsiveness and improve its usability, memorability, and learnability.
+                            </div>
+                        </p>
+                        </div>
+                        <a href="https://portfolio-ten-pi-71.vercel.app/redesign/redesign" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            View More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Project 1</h4>
