--- a/index.html
+++ b/index.html
@@ -150,33 +150,8 @@
 
                 <div class="services_container container grid">
 
-                    <!-- project 1 -->
-                    <div class="services_content">
-                        <div>
-                            <img src="assets/img/sample_dataset.png" alt="" class="project_img">
-                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                                <h3 class="services_title">Deepfake Facial Detection</h3>
-                                <p class="project_description">
-                                    In a group of four, I implemented a deepfake facial detector using MTCNN for feature extraction and EfficientNetB0 to categorize real vs. fake faces in video clips.
-                                </p>
-                            </div>
-                        </div>
-                        <a href="https://github.com/jennjwang/deepfake-detection" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            View More 
-                            <i class="uil uil-arrow-right button_icon"></i>
-                        </a>
-                        <div class="services_modal">
-                            <div class="services_modal-content">
-                                <h4 class="services_modal-title">Project 1</h4>
-                                <p>
-                                    fwoifhwoihfiowhfoiw
-                                </p>
-                                <i class="uil uil-times services_modal-close"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- project 2 -->
+                    
+                    <!-- project 1-->
                     <div class="services_content">
                         <div>
                             <img src="assets/img/arview.PNG" alt="" class="project_img">
@@ -207,14 +182,40 @@
                         </div>
                     </div>
 
+                    <!-- project 2 -->
+                    <div class="services_content">
+                        <div>
+                            <img src="assets/img/sample_dataset.png" alt="" class="project_img">
+                            <div style="padding: 1rem 1.5rem 1rem 2rem;">
+                                <h3 class="services_title">Deepfake Facial Detection</h3>
+                                <p class="project_description">
+                                    In a group of four, I implemented a deepfake facial detector using MTCNN for feature extraction and EfficientNetB0 to categorize real vs. fake faces in video clips.
+                                </p>
+                            </div>
+                        </div>
+                        <a href="https://github.com/jennjwang/deepfake-detection" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                            View More 
+                            <i class="uil uil-arrow-right button_icon"></i>
+                        </a>
+                        <div class="services_modal">
+                            <div class="services_modal-content">
+                                <h4 class="services_modal-title">Project 1</h4>
+                                <p>
+                                    fwoifhwoihfiowhfoiw
+                                </p>
+                                <i class="uil uil-times services_modal-close"></i>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- project 3 -->
                     <div class="services_content">
                         <div>
-                            <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                            <img src="assets/img/rlang.png" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
                             <h3 class="services_title">RLang</h3>
                             <p class="project_description">
-                                A Domain-Specific Language for communicating domain knowledge to an RL agent. Using RLang, you can specify information about every element of a Markov Decision Process to bootstrap the agent's learning. 
+                                A Domain-Specific Language for communicating domain knowledge to an RL agent. Using RLang, you can specify information about every element of a Markov Decision Process to bootstrap the agent's learning (Presented at RLDM 2022). 
                             </div>
                         </p>
                         </div>
@@ -236,18 +237,18 @@
                     <!-- project 4 -->
                     <div class="services_content">
                         <div>
-                            <img src="assets/img/portfolio1.jpg" alt="" class="project_img">
+                            <img src="assets/img/hrc.jpg" alt="" class="project_img">
                             <div style="padding: 1rem 1.5rem 1rem 2rem;">
                             <h3 class="services_title">Robotic Learning Interface</h3>
                             <p class="project_description">
-                                fhwoifhwiofhwoifh
+                                With the goal of teaching robotic arm pick-and-place tasks, I added ML algorithm support to a robotic learning interface, implementing sequential prediction with LSTMs and simulating an RL learning environment through simple_rl.
                             </div>
                         </p>
                         </div>
-                        <span class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
+                        <a href="https://github.com/shelly-bagchi/robot-learning-interface/tree/main/Algorithms" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
-                        </span>
+                        </a>
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Project 1</h4>
