fixed contact form

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <span class="section_subtitle">Don't worry, I don't bite</span>
 
                 <div class="contact_container container grid">
-                    <form action="https://formsubmit.co/jennifer123wang@email.com" method="POST" class="contact_form grid">
+                    <form action="https://formsubmit.co/jennifer123wang@gmail.com" method="POST" class="contact_form grid">
                         <div class="contact_content">
                             <label for="" class="contact_label">Name</label>
                             <input type="text" class="contact_input">
