--- a/index.html
+++ b/index.html
@@ -441,22 +441,22 @@
                 <span class="section_subtitle">Don't worry, I don't bite</span>
 
                 <div class="contact_container container grid">
-                    <form action="https://formsubmit.co/jennifer123wang@gmail.com" method="POST" class="contact_form grid">
+                    <form action="https://formspree.io/f/mwkjkaao" method="POST" class="contact_form grid">
                         <div class="contact_content">
                             <label for="" class="contact_label">Name</label>
-                            <input type="text" class="contact_input">
+                            <input type="text" class="contact_input" name="name" required>
                         </div>
                         <div class="contact_content">
                             <label for="" class="contact_label">Email</label>
-                            <input type="email" class="contact_input">
+                            <input type="email" class="contact_input" name="email" required>
                         </div>
                         <div class="contact_content">
                             <label for="" class="contact_label">Subject</label>
-                            <input type="text" class="contact_input">
+                            <input type="text" class="contact_input" name="subject" required>
                         </div>
                         <div class="contact_content">
                             <label for="" class="contact_label">Message</label>
-                            <textarea name="" id="" cols="00" rows="7" class="contact_input"></textarea>
+                            <textarea name="" id="" cols="00" rows="7" class="contact_input" name="message" required></textarea>
                         </div>
 
                         <div>
