--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         </div>
                         <div class="contact_content">
                             <label for="" class="contact_label">Message</label>
-                            <textarea name="" id="" cols="00" rows="7" class="contact_input" name="message" required></textarea>
+                            <textarea id="" cols="00" rows="7" class="contact_input" name="message" required></textarea>
                         </div>
 
                         <div>
