--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Jenn's Portfolio</title>
+        <link rel="icon" href="assets/img/logo.png" type="image/icon type">
     </head>
     <body>
         <!--==================== HEADER ====================-->
