--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Jenn's Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico"  />
+        <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png"  />
     </head>
     <body>
         <!--==================== HEADER ====================-->
