--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <script src="https://kit.fontawesome.com/3f03faa369.js" crossorigin="anonymous"></script>
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+        <!-- <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"> -->
         
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Jenn's Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/logo.png"  />
+        <title>Jennifer Wang</title>
+        <link rel="icon" href="icon.png"type="image/x-icon"> 
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -520,7 +520,6 @@
         </a>
 
         <!--==================== SWIPER JS ====================-->
-        <script src="assets/js/swiper-bundle.min.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--==================== MAIN JS ====================-->
