--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section" id="experience">
                 <h2 class="section_title">Follow my journey</h2>
-                <span class="section_subtitle">Here's my professional experience</span>
+                <span class="section_subtitle">Here are my professional experiences</span>
                 <div class="experience-container container">
                     <div class="experience_sections">
                         <div class="experience_content">
