--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-@@ -1,526 +0,0 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -319,7 +318,7 @@
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section" id="experience">
                 <h2 class="section_title">Follow my journey</h2>
-                <span class="section_subtitle">Here are my professional experiences</span>
+                <span class="section_subtitle">Here's my professional experience</span>
                 <div class="experience-container container">
                     <div class="experience_sections">
                         <div class="experience_content">
@@ -525,4 +524,4 @@
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
     </body>
-</html>
+    </html>
