fixed bug to download resume

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             With the history of systemic inequities encoded into our everyday devices, I strive to re-engineer human-centric solutions and leverage the power of technology for social impact. This mission translates into my work wherever I go, whether that’s building a VR interface for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
                         </p>
                         <div class="about_button">
-                            <a download="" href="assets/pdf/nyt.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button_icon"></i>
                             </a>
                         </div>
