--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <span class="section_subtitle">Don't worry, I don't bite</span>
 
                 <div class="contact_container container grid">
-                    <form action="https://formspree.io/f/mwkjkaao" method="POST" class="contact_form grid">
+                    <form class="contact_form grid" name="contact" netlify>
                         <div class="contact_content">
                             <label for="" class="contact_label">Name</label>
                             <input type="text" class="contact_input" name="name" required>
