--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         <title>Jennifer Wang</title>
         <link rel="icon" href="icon.png"type="image/x-icon"> 
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JEQ6MWLN1H"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JEQ6MWLN1H');
+    </script>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
