added name attrib to form

--- a/index.html
+++ b/index.html
@@ -452,19 +452,19 @@
                 <div class="contact_container container grid">
                     <form class="contact_form grid" name="contact" netlify>
                         <div class="contact_content">
-                            <label for="" class="contact_label">Name</label>
+                            <label for="" class="contact_label" name="name">Name</label>
                             <input type="text" class="contact_input" name="name" required>
                         </div>
                         <div class="contact_content">
-                            <label for="" class="contact_label">Email</label>
+                            <label for="" class="contact_label" name="email">Email</label>
                             <input type="email" class="contact_input" name="email" required>
                         </div>
                         <div class="contact_content">
-                            <label for="" class="contact_label">Subject</label>
+                            <label for="" class="contact_label" name="subject">Subject</label>
                             <input type="text" class="contact_input" name="subject" required>
                         </div>
                         <div class="contact_content">
-                            <label for="" class="contact_label">Message</label>
+                            <label for="" class="contact_label" name="message">Message</label>
                             <textarea id="" cols="00" rows="7" class="contact_input" name="message" required></textarea>
                         </div>
 
