--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p class="about_description">
                             For the longest time, I believed in technology’s promise to solve society’s greatest challenges, without realizing that technology is a double-edged sword. 
                             <br><br>
-                            In the face of a history of systemic inequities encoded into our everyday devices, I strive to engineer human-centered solutions and leverage the power of technology for social impact. This mission translates into my work wherever I go, whether that’s building a VR interface for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
+                            In the face of a history of systemic inequities encoded into our everyday devices, I strive to engineer human-centered solutions and leverage the power of technology for social impact. This mission translates into my work wherever I go, whether that’s building models for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
