updated about me

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
-                            <h3 class="home_subtitle">Student Developer</h3>
+                            <h3 class="home_subtitle"></h3>
                             <p class="home_description">I'm a junior at Brown University studying Computer Science and International and Public Affairs with an interest in tech policy and human-centered computing.</p>
                             <a href="#contact" class="button button--flex">
-                                Let's Connect &nbsp;:)
+                                Let's connect &nbsp;:)
                             </a>
                         </div>
                     </div>
@@ -135,14 +135,14 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
                 <h2 class="about_title section_title">Nice to meet you</h2>
-                <span class="about_subtitle section_subtitle">Here's how I started and why I build</span>
+                <span class="about_subtitle section_subtitle">Here's a little about me</span>
                 <div class="about_container container grid">
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            For the longest time, I believed in technology’s promise to solve society’s greatest challenges, without realizing that technology is a double-edged sword. 
-                            <br><br>
-                            In the face of a history of systemic inequities encoded into our everyday devices, I strive to engineer human-centered solutions and leverage the power of technology for social impact. This mission translates into my work wherever I go, whether that’s building models for human-robot collaboration at NIST or measuring the efficacy of Covid recovery programs at the RI state government.
+                            Ask my friends for three words to describe me, and they'll say: curious, driven, and loud. The last one is definitely true — you'll hear my laughter echoing from across the room before meeting me in person (see a photo of me and Arati sharing a good chuckle)! 
+                            <br></br>
+                            I'll say I'm optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching policies that harness the benefits of AI and mitigate its risks at OSTP.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
@@ -155,7 +155,7 @@
 
             <section class="services section" id="projects">
                 <h2 class="section_title">Check out my work</h2>
-                <span class="section_subtitle">Here are a few projects I've worked on</span>
+                <span class="section_subtitle">Here are some things I've worked on</span>
 
                 <div class="services_container container grid">
 
@@ -206,7 +206,7 @@
                             View More 
                             <i class="uil uil-arrow-right button_icon"></i>
                         </a>
-                        <div class="services_modal">
+                        <!-- <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Project 1</h4>
                                 <p>
@@ -214,7 +214,7 @@
                                 </p>
                                 <i class="uil uil-times services_modal-close"></i>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- project 3 -->
@@ -420,7 +420,7 @@
                                         09/2021-Present
                                     </div>
                                     <p class="experience_content">
-                                        CS1410 Artificial Intelligence: I sesigned an adversarial multiplayer game based on Pax-Con as the course's final project; teaching knowledge representation and search, optimization, and machine learning algorithms.
+                                        CS1410 Artificial Intelligence: I designed an adversarial multiplayer game based on Pax-Con as the course's final project; teaching knowledge representation and search, optimization, and machine learning algorithms.
 
                                         <br><br>
                                         CS0320 Software Engineering: I designed curriculum featuring screen reader development and accessibility; held weekly office hours and mentor meetings for over 200 students, teaching Java, Typescript, and React.
@@ -534,9 +534,9 @@
                             JW
                         </h1>
                         </a>
-                        <span class="footer_subtitle">
-                            Student Developer
-                        </span>
+                        <!-- <span class="footer_subtitle">
+                            Student Researcher
+                        </span> -->
                     </div>
 
                     <ul class="footer_links">
