--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p class="about_description">
                             Ask my friends for three words to describe me, and they'll say: curious, driven, and loud. The last one is definitely true — you'll hear my laughter echoing from across the room before meeting me in person (see a photo of me and Arati sharing a good chuckle)! 
                             <br></br>
-                            I'll say I'm optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching policies that harness the benefits of AI and mitigate its risks at OSTP.
+                            I'll say I'm optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with the necessary guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching AI policies that mitigate the potential for harm at OSTP.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
@@ -391,7 +391,7 @@
                                         01/2022-05/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked under the Collaborative Robotics Laboratory at NIST to to add machine learning support to a robot teaching interface. With the goal of teaching a robot through human demonstration, I implemented long short-term memory networks and reinforcement learning algorithms before collecting results in simulation.
+                                        I worked under the Collaborative Robotics Laboratory at NIST to to add machine learning support to a robot teaching interface. With the goal of teaching a robot through human demonstration, I implemented a long short-term memory solution and reinforcement learning algorithms before collecting results in simulation.
                                     </p>
                                 </div>
                                 <div>
