--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                     <div class="about_data">
                         <p class="about_description">
-                            Ask my friends for three words to describe me, and they'll say: curious, driven, and loud. The last one is definitely true — you'll hear my laughter echoing from across the room before meeting me in person (see a photo of me and Arati sharing a good chuckle)! 
+                            My friends describe me in three words: curious, driven, and loud. The last one is definitely true — you'll hear my laughter roaring across the room before even meeting me (see the photo of me and Arati sharing a good chuckle)! 
                             <br></br>
-                            I'll say I'm optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with the necessary guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching AI policies that mitigate the potential for harm at OSTP.
+                            I describe myself as an optimist at heart and a cautionist by training. I believe in technology's promise to tackle society's greatest challenges but only with the necessary guardrails to ensure its safe and responsible use. This philosophy has motivated my work, from exploring models for human-robot collaboration at NIST to researching AI policies that mitigate the potential for harm at OSTP.
                         </p>
                         <div class="about_button">
                             <a download="" href="assets/pdf/jennifer_wang.pdf" class="button button--flex">
